# atlas-migration

./: Cargo.toml
src/: acc_trn.rs  inv_trn.rs  main.rs
src/model/: acc_trn.rs  account.rs  account_opening.rs  account_transaction.rs  bank_txn.rs  batch.rs  bill_allocation.rs  branch.rs  cash_register.rs  contact.rs  desktop_client.rs  discount_code.rs  doctor.rs  financial_year.rs  gst_registration.rs  inventory.rs  inventory1.rs  inventory_head.rs  inventory_opening.rs  inventory_transaction.rs  manufacturer.rs  member.rs  mod.rs  patient.rs  pharma_salt copy 3.rs  pharma_salt.rs  pos_terminal.rs  print_template.rs  rack.rs  sale_incharge.rs  save_voucher.rs  section.rs  set_account_opening.rs  set_inventory_opening.rs  tds_nature_of_payment.rs  unit.rs  vendor_bill_mapping.rs  vendor_inventory_map.rs  vendor_item_mapping.rs  voucher.rs  (+2 more)
