[package]
name = "atlas-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
clap = { version = "4.4.6", features = ["derive"] }
mongodb = { version = "2.6.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.171", features = ["derive"] }
surrealdb = { version = "1.0.0" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
